--- a/index.html
+++ b/index.html
@@ -78,18 +78,18 @@
                   <div class="info letter-container">
                     <h2 class="fade">Добро пожолуват</h2>
                   </div>
-                  <h4 class="subtitle">Просто стаил(Style)</h4>
+                  <h4 class="subtitle">Меня зовут Аваис Ч Мухаммад</h4>
                   <div class="bottomup">
-                    <img src="img/slider/parallax/img-1.png" alt="">
+                    <img src="img/slider/parallax/img0-1.jpg" alt="">
                   </div>
                 </li>
                 <li class="animate-in">
                   <div class="info letter-container">
-                    <h2 class="fade">Это сайт для ИТ</h2>
+                    <h2 class="fade">Я учу в СТСНКИН ИДМ 19-06</h2>
                   </div>
-                  <h4 class="subtitle">Сегодня <script> document.write(new Date().toLocaleDateString()); </script></h4>
+                  <h4 class="subtitle">Я из Пакистана и Сегодня <script> document.write(new Date().toLocaleDateString()); </script> чесло</h4>
                   <div class="lefttop">
-                    <img src="img/slider/parallax/img-2.png" alt="">
+                    <img src="img/slider/parallax/12.jpg" alt="">
                   </div>
                 </li>
               </ul>
