--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
           <div class="flexslider">
             <ul class="slides">
               <li>
-                <img src="img/slider/flexslider/g1.PNG" alt="">
+                <img src="img/slider/flexslider/img-1.png" alt="">
               </li>
               <li>
-                <img src="img/slider/flexslider/g2.PNG" alt="">
+                <img src="img/slider/flexslider/img-2.png" alt="">
               </li>
               
             </ul>
