--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <p>
             <p>
               <div class="dotted_line"></div>
-              <h3>1. Регистрация на GitHub.</h3>
+		<h3>1. Регистрация на <a href="https://github.com/Muhammad0Awais">GitHub</a>.</h3>
               <h3>2. Подключение к репозиторию.</h3>
               <h3>3. Создание личной страницы.</h3>
               <h3>4. Размещение кода исходной страницы в репозитории.</h3>
