--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 		<h3>1. Регистрация на <a href="https://github.com/Muhammad0Awais">GitHub</a>.</h3>
               <h3>2. Подключение к репозиторию.</h3>
               <h3>3. Создание личной страницы.</h3>
-              <h3>4. Размещение кода исходной страницы в репозитории.</h3>
+              <h3>4. Размещение <a href="https://github.com/Muhammad0Awais/PersonalPage.github.io">кода</a> исходной страницы в репозитории.</h3>
               <h3>5. Размещение странички на хостинге.</h3>
         </div>
       </div>
