--- a/index.html
+++ b/index.html
@@ -237,23 +237,19 @@
           <div class="section-intro">
             <p>
               Настройка локальной сети передачи данных
+	      Вариант №1
             </p>
           </div>
         </div>
         <div class="span12">
           <ul class="filter">
             <li class="all active"><a href="#" class="btn btn-color">Все шаги</a></li>
-            <li class="web"><a href="#" class="btn btn-color">Шаг 1</a></li>
-            <li class="brand"><a href="#" class="btn btn-color">Шаг 2</a></li>
-            <li class="graphic"><a href="#" class="btn btn-color">Шаг 3</a></li>
-            <li class="photo"><a href="#" class="btn btn-color">Шаг 4</a></li>
-            <li class="ilustrator"><a href="#" class="btn btn-color">Шаг 5</a></li>
           </ul>
           <div class="row">
             <ul class="portfolio-area">
               <li class="portfolio-item2" data-id="id-0" data-type="web">
                 <div class="thumb-wrapp">
-                  <img src="img/portfolio/img1.jpg" class="folio-image" alt="">
+                  <img src="img/portfolio/img1.png" class="folio-image" alt="">
                   <div class="folio-caption">
                     <h5>Portfolio name</h5>
                     <span class="folio-link">
@@ -266,7 +262,7 @@
               </li>
               <li class="portfolio-item2" data-id="id-0" data-type="brand">
                 <div class="thumb-wrapp">
-                  <img src="img/portfolio/img2.jpg" class="folio-image" alt="">
+                  <img src="img/portfolio/img2.png" class="folio-image" alt="">
                   <div class="folio-caption">
                     <h5>Portfolio name</h5>
                     <span class="folio-link">
@@ -279,7 +275,7 @@
               </li>
               <li class="portfolio-item2" data-id="id-0" data-type="web">
                 <div class="thumb-wrapp">
-                  <img src="img/portfolio/img3.jpg" class="folio-image" alt="">
+                  <img src="img/portfolio/img3.png" class="folio-image" alt="">
                   <div class="folio-caption">
                     <h5>Portfolio name</h5>
                     <span class="folio-link">
@@ -292,7 +288,7 @@
               </li>
               <li class="portfolio-item2" data-id="id-0" data-type="graphic">
                 <div class="thumb-wrapp">
-                  <img src="img/portfolio/img4.jpg" class="folio-image" alt="">
+                  <img src="img/portfolio/img4.png" class="folio-image" alt="">
                   <div class="folio-caption">
                     <h5>Portfolio name</h5>
                     <span class="folio-link">
@@ -305,7 +301,7 @@
               </li>
               <li class="portfolio-item2" data-id="id-0" data-type="ilustrator">
                 <div class="thumb-wrapp">
-                  <img src="img/portfolio/img5.jpg" class="folio-image" alt="">
+                  <img src="img/portfolio/img5.png" class="folio-image" alt="">
                   <div class="folio-caption">
                     <h5>Portfolio name</h5>
                     <span class="folio-link">
@@ -318,7 +314,7 @@
               </li>
               <li class="portfolio-item2" data-id="id-0" data-type="brand">
                 <div class="thumb-wrapp">
-                  <img src="img/portfolio/img6.jpg" class="folio-image" alt="">
+                  <img src="img/portfolio/img6.png" class="folio-image" alt="">
                   <div class="folio-caption">
                     <h5>Portfolio name</h5>
                     <span class="folio-link">
@@ -331,72 +327,7 @@
               </li>
               <li class="portfolio-item2" data-id="id-0" data-type="photo">
                 <div class="thumb-wrapp">
-                  <img src="img/portfolio/img7.jpg" class="folio-image" alt="">
-                  <div class="folio-caption">
-                    <h5>Portfolio name</h5>
-                    <span class="folio-link">
-									<a href="img/portfolio/big.jpg" data-pretty="prettyPhoto" title="zoom">
-									<i class="icon-rounded  icon-32 icon-zoom-in"></i></a>
-									<a href="#"><i class="icon-rounded  icon-32 icon-link"></i></a>
-									</span>
-                  </div>
-                </div>
-              </li>
-              <li class="portfolio-item2" data-id="id-0" data-type="photo">
-                <div class="thumb-wrapp">
-                  <img src="img/portfolio/img8.jpg" class="folio-image" alt="">
-                  <div class="folio-caption">
-                    <h5>Portfolio name</h5>
-                    <span class="folio-link">
-									<a href="img/portfolio/big.jpg" data-pretty="prettyPhoto" title="zoom">
-									<i class="icon-rounded  icon-32 icon-zoom-in"></i></a>
-									<a href="#"><i class="icon-rounded  icon-32 icon-link"></i></a>
-									</span>
-                  </div>
-                </div>
-              </li>
-              <li class="portfolio-item2" data-id="id-0" data-type="brand">
-                <div class="thumb-wrapp">
-                  <img src="img/portfolio/img9.jpg" class="folio-image" alt="">
-                  <div class="folio-caption">
-                    <h5>Portfolio name</h5>
-                    <span class="folio-link">
-									<a href="img/portfolio/big.jpg" data-pretty="prettyPhoto" title="zoom">
-									<i class="icon-rounded  icon-32 icon-zoom-in"></i></a>
-									<a href="#"><i class="icon-rounded  icon-32 icon-link"></i></a>
-									</span>
-                  </div>
-                </div>
-              </li>
-              <li class="portfolio-item2" data-id="id-0" data-type="photo">
-                <div class="thumb-wrapp">
-                  <img src="img/portfolio/img10.jpg" class="folio-image" alt="">
-                  <div class="folio-caption">
-                    <h5>Portfolio name</h5>
-                    <span class="folio-link">
-									<a href="img/portfolio/big.jpg" data-pretty="prettyPhoto" title="zoom">
-									<i class="icon-rounded  icon-32 icon-zoom-in"></i></a>
-									<a href="#"><i class="icon-rounded  icon-32 icon-link"></i></a>
-									</span>
-                  </div>
-                </div>
-              </li>
-              <li class="portfolio-item2" data-id="id-0" data-type="graphic">
-                <div class="thumb-wrapp">
-                  <img src="img/portfolio/img11.jpg" class="folio-image" alt="">
-                  <div class="folio-caption">
-                    <h5>Portfolio name</h5>
-                    <span class="folio-link">
-									<a href="img/portfolio/big.jpg" data-pretty="prettyPhoto" title="zoom">
-									<i class="icon-rounded  icon-32 icon-zoom-in"></i></a>
-									<a href="#"><i class="icon-rounded  icon-32 icon-link"></i></a>
-									</span>
-                  </div>
-                </div>
-              </li>
-              <li class="portfolio-item2" data-id="id-0" data-type="brand">
-                <div class="thumb-wrapp">
-                  <img src="img/portfolio/img12.jpg" class="folio-image" alt="">
+                  <img src="img/portfolio/img7.png" class="folio-image" alt="">
                   <div class="folio-caption">
                     <h5>Portfolio name</h5>
                     <span class="folio-link">
