--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                   <div class="folio-caption">
                     <h5>Portfolio name</h5>
                     <span class="folio-link">
-									<a href="img/portfolio/big.jpg" data-pretty="prettyPhoto" title="zoom">
+									<a href="img/portfolio/img1.png" data-pretty="prettyPhoto" title="zoom">
 									<i class="icon-rounded  icon-32 icon-zoom-in"></i></a>
 									<a href="#"><i class="icon-rounded  icon-32 icon-link"></i></a>
 									</span>
@@ -266,7 +266,7 @@
                   <div class="folio-caption">
                     <h5>Portfolio name</h5>
                     <span class="folio-link">
-									<a href="img/portfolio/big.jpg" data-pretty="prettyPhoto" title="zoom">
+									<a href="img/portfolio/img2.png" data-pretty="prettyPhoto" title="zoom">
 									<i class="icon-rounded  icon-32 icon-zoom-in"></i></a>
 									<a href="#"><i class="icon-rounded  icon-32 icon-link"></i></a>
 									</span>
@@ -279,7 +279,7 @@
                   <div class="folio-caption">
                     <h5>Portfolio name</h5>
                     <span class="folio-link">
-									<a href="img/portfolio/big.jpg" data-pretty="prettyPhoto" title="zoom">
+									<a href="img/portfolio/img3.png" data-pretty="prettyPhoto" title="zoom">
 									<i class="icon-rounded  icon-32 icon-zoom-in"></i></a>
 									<a href="#"><i class="icon-rounded  icon-32 icon-link"></i></a>
 									</span>
@@ -292,7 +292,7 @@
                   <div class="folio-caption">
                     <h5>Portfolio name</h5>
                     <span class="folio-link">
-									<a href="img/portfolio/big.jpg" data-pretty="prettyPhoto" title="zoom">
+									<a href="img/portfolio/img4.png" data-pretty="prettyPhoto" title="zoom">
 									<i class="icon-rounded  icon-32 icon-zoom-in"></i></a>
 									<a href="#"><i class="icon-rounded  icon-32 icon-link"></i></a>
 									</span>
@@ -305,7 +305,7 @@
                   <div class="folio-caption">
                     <h5>Portfolio name</h5>
                     <span class="folio-link">
-									<a href="img/portfolio/big.jpg" data-pretty="prettyPhoto" title="zoom">
+									<a href="img/portfolio/img5.png" data-pretty="prettyPhoto" title="zoom">
 									<i class="icon-rounded  icon-32 icon-zoom-in"></i></a>
 									<a href="#"><i class="icon-rounded  icon-32 icon-link"></i></a>
 									</span>
@@ -318,7 +318,7 @@
                   <div class="folio-caption">
                     <h5>Portfolio name</h5>
                     <span class="folio-link">
-									<a href="img/portfolio/big.jpg" data-pretty="prettyPhoto" title="zoom">
+									<a href="img/portfolio/img6.png" data-pretty="prettyPhoto" title="zoom">
 									<i class="icon-rounded  icon-32 icon-zoom-in"></i></a>
 									<a href="#"><i class="icon-rounded  icon-32 icon-link"></i></a>
 									</span>
@@ -331,7 +331,7 @@
                   <div class="folio-caption">
                     <h5>Portfolio name</h5>
                     <span class="folio-link">
-									<a href="img/portfolio/big.jpg" data-pretty="prettyPhoto" title="zoom">
+									<a href="img/portfolio/img7.png" data-pretty="prettyPhoto" title="zoom">
 									<i class="icon-rounded  icon-32 icon-zoom-in"></i></a>
 									<a href="#"><i class="icon-rounded  icon-32 icon-link"></i></a>
 									</span>
