--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <p>
             <p>
               <div class="dotted_line"></div>
-		<h3>1. Регистрация на <a href="https://github.com/Muhammad0Awais">GitHub</a>.</h3>
+	      <h3>1. Регистрация на <a href="https://github.com/Muhammad0Awais">GitHub</a>.</h3>
               <h3>2. Подключение к репозиторию.</h3>
               <h3>3. Создание личной страницы.</h3>
               <h3>4. Размещение <a href="https://github.com/Muhammad0Awais/PersonalPage.github.io">кода</a> исходной страницы в репозитории.</h3>
@@ -167,7 +167,7 @@
         <div class="span12">
           <div class="section-intro">
             <p>
-              Разработка Проекта
+              Car Racing Game
             </p>
           </div>
         </div>
@@ -188,11 +188,9 @@
             <i class="icon-circled icon-48 icon-beaker"></i>
             <h3>Роли команды.</h3>
             <p align='left'>
-              1- Аваис - Эксперт </br>
-              2- Главный дизайнер</br>
-              3- Ведущий разработчик</br>
+              1- <a href="https://github.com/Muhammad0Awais">Аваис</a> - Эксперт </br>
+              2- <a href="https://github.com/Manis1993">Альмухаммад</a>- Главный дизайнер</br>
             </p>
-            <a href="#" class="btn btn-color">Learn more</a>
           </div>
         </div>
         <div class="span3">
@@ -200,23 +198,21 @@
             <i class="icon-circled icon-48 icon-cog"></i>
             <h3>Разработать.</h3>
             <p>
-              -</br>
-              -</br>
-              -</br>
+              HTML</br>
+              JS</br>
+              CSS</br>
             </p>
-            <a href="#" class="btn btn-color">Learn more</a>
           </div>
         </div>
         <div class="span3">
           <div class="well box aligncenter">
             <i class="icon-circled icon-48 icon-github"></i>
             <h3>Проект на GitHub</h3>
-            <p>
-              -</br>
+             <p>
               -</br>
               -</br>
             </p>
-            <a href="#" class="btn btn-color">Learn more</a>
+            <a href="https://muhammad0awais.github.io/game.github.io/" class="btn btn-color">Learn more</a>
           </div>
         </div>
       </div>
