--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
             <i class="icon-circled icon-48 icon-beaker"></i>
             <h3>Роли команды.</h3>
             <p align='left'>
-              1- <a href="https://github.com/Muhammad0Awais">Аваис</a> - Эксперт </br>
-              2- <a href="https://github.com/Manis1993">Альмухаммад</a>- Главный дизайнер</br>
+              1- <a href="https://github.com/Muhammad0Awais">Аваис</a> - РП НИ БА ПП</br>
+              2- <a href="https://github.com/Manis1993">Альмухаммад</a>- СР ВН АД КО</br>
             </p>
           </div>
         </div>
@@ -208,10 +208,10 @@
             <i class="icon-circled icon-48 icon-github"></i>
             <h3>Проект на GitHub</h3>
              <p>
-              -</br>
+              <a href="https://github.com/Muhammad0Awais/game.github.io">Код</a>-</br>
               -</br>
             </p>
-            <a href="https://muhammad0awais.github.io/game.github.io/" class="btn btn-color">Learn more</a>
+            <a href="https://muhammad0awais.github.io/game.github.io/" class="btn btn-color">Игра</a>
           </div>
         </div>
       </div>
