--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <i class="icon-circled icon-48 icon-beaker"></i>
             <h3>Роли команды.</h3>
             <p align='left'>
-              1- <a href="https://github.com/Muhammad0Awais">Аваис</a> - РП НИ БА ПП</br>
+              1- <a href="https://github.com/Muhammad0Awais">Аваис</a> - Управление проектами НИ БА ПП</br>
               2- <a href="https://github.com/Manis1993">Альмухаммад</a>- СР ВН АД КО</br>
             </p>
           </div>
@@ -208,8 +208,7 @@
             <i class="icon-circled icon-48 icon-github"></i>
             <h3>Проект на GitHub</h3>
              <p>
-              <a href="https://github.com/Muhammad0Awais/game.github.io">Код</a>-</br>
-              -</br>
+              <a href="https://github.com/Muhammad0Awais/game.github.io">Код</a></brЮ
             </p>
             <a href="https://muhammad0awais.github.io/game.github.io/" class="btn btn-color">Игра</a>
           </div>
