--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <i class="icon-circled icon-48 icon-github"></i>
             <h3>Проект на GitHub</h3>
              <p>
-              <a href="https://github.com/Muhammad0Awais/game.github.io">Код</a></brЮ
+		     <a href="https://github.com/Muhammad0Awais/game.github.io">Код</a></br>
             </p>
             <a href="https://muhammad0awais.github.io/game.github.io/" class="btn btn-color">Игра</a>
           </div>
