--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <i class="icon-circled active icon-48 icon-group"></i>
             <h3>Команда</h3>
             <p>
-              Наша Команда называеться TechnoHeros, Потому что мы супер Герое
+              Наша Команда называеться TechnoHeros, Потому что мы супер Герое</br>
             </p>
           </div>
         </div>
@@ -199,7 +199,7 @@
             <p>
               HTML</br>
               JS</br>
-              CSS</br>
+              CSS</br></br>
             </p>
           </div>
         </div>
@@ -210,7 +210,7 @@
              <p>
 	    <a href="https://github.com/Muhammad0Awais/game.github.io" class="btn btn-color">Код</a></br>
             </p>
-            <a href="https://muhammad0awais.github.io/game.github.io/" class="btn btn-color">Игра</a>
+            <a href="https://muhammad0awais.github.io/game.github.io/" class="btn btn-color">Игра</a></br>
           </div>
         </div>
       </div>
