--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <i class="icon-circled active icon-48 icon-group"></i>
             <h3>Команда</h3>
             <p>
-              Наша Команда называеться TechnoHeros, Потому что мы супер Герое</br>
+              Наша Команда называеться TechnoHeros, Потому что мы супер Герое
             </p>
           </div>
         </div>
@@ -187,8 +187,8 @@
             <i class="icon-circled icon-48 icon-beaker"></i>
             <h3>Роли команды.</h3>
             <p align='left'>
-              1- <a href="https://github.com/Muhammad0Awais">Аваис</a> - Системное программирование НИ БА ПП</br>
-              2- <a href="https://github.com/Manis1993">Альмухаммад</a>- Управление проектами ВН АД КО
+              1- <a href="https://github.com/Muhammad0Awais">Аваис</a> - СП НИ БА ПП</br>
+              2- <a href="https://github.com/Manis1993">Альмухаммад</a>- УП ВН АД КО
             </p>
           </div>
         </div>
@@ -209,8 +209,8 @@
             <h3>Проект на GitHub</h3>
              <p>
 	    <a href="https://github.com/Muhammad0Awais/game.github.io" class="btn btn-color">Код</a></br>
-            </p>
-            <a href="https://muhammad0awais.github.io/game.github.io/" class="btn btn-color">Игра</a></br>
+            <a href="https://muhammad0awais.github.io/game.github.io/" class="btn btn-color">Игра</a> </br>
+	    </p>
           </div>
         </div>
       </div>
