--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <h3>Роли команды.</h3>
             <p align='left'>
               1- <a href="https://github.com/Muhammad0Awais">Аваис</a> - СП НИ БА ПП</br>
-              2- <a href="https://github.com/Manis1993">Альмухаммад</a>- УП ВН АД КО
+		2- <a href="https://github.com/Manis1993">Альмухаммад</a>- УП ВН АД КО </br>
             </p>
           </div>
         </div>
@@ -199,18 +199,18 @@
             <p>
               HTML</br>
               JS</br>
-              CSS</br></br>
+              CSS</br>
             </p>
           </div>
         </div>
         <div class="span3">
           <div class="well box aligncenter">
             <i class="icon-circled icon-48 icon-github"></i>
-            <h3>Проект на GitHub</h3>
+            <h3>Проект на <a href="https://github.com/Muhammad0Awais/game.github.io" class="btn btn-color">GitHub</a></h3>
              <p>
-	    <a href="https://github.com/Muhammad0Awais/game.github.io" class="btn btn-color">Код</a></br>
-            <a href="https://muhammad0awais.github.io/game.github.io/" class="btn btn-color">Игра</a> </br>
+            Код и Игра
 	    </p>
+		<a href="https://muhammad0awais.github.io/game.github.io/" class="btn btn-color">Игра</a> </br>
           </div>
         </div>
       </div>
