--- a/index.html
+++ b/index.html
@@ -346,19 +346,19 @@
       <div class="row">
         <div class="span12">
           <div class="headline">
-            <h3><span>Подготовка к экзамену Билет 7</span></h3>
+		  <h3><span>Подготовка к экзамену</span></br>Билет 7</h3>
           </div>
         </div>
         <div class="span12">
           <div class="section-intro">
             <p style="text-align:left"'>
-		    <b>1.	Интернет вещей. Индустриальный интернет вещей. Кибербезопасность.</b></br>
+		    <b>1.	Интернет вещей. Индустриальный интернет вещей. Кибербезопасность.</b></br></br>
 <b>Интернет вещей</b>:	Интернет вещей (Internet of things, IoT) — это технология, которая объединяет устройства в компьютерную сеть и позволяет им собирать, анализировать, обрабатывать и передавать данные другим объектам с помощью программного обеспечения, приложений или технических устройств.</br>
 <b>Индустриальный интернет вещей</b>:	Технология IIoT состоит из подключенного к Интернету оборудования и платформ расширенной аналитики, которые выполняют обработку данных, получаемых от подключенных устройств. Устройства IIoT могут быть самыми разными — от небольших датчиков погоды до сложных промышленных роботов. Несмотря на то, что слово «промышленный» вызывает такие ассоциации, как склады, судоверфи и производственные цеха, технологии IIoT имеют большой потенция использования в самых различных отраслях, включая сельское хозяйство, здравоохранение, финансовые услуги, розничную торговлю и рекламу.</br>
 <b>Кибербезопасность</b>:	Кибербезопасность – это воплощение всех мер защиты сетей, приложений и устройств. Это решение направлено на безопасность конфиденциальных данных, на защиту их целостности, а также на сохранение корректной работы той или иной организации.</br>
-<b>2.	Особенности HTML5 и CSS2. Возможности элемента canvas.</b></br>
-<b>HTML5</b>-это стек программных решений, который определяет свойства и поведение содержимого веб-страницы путем реализации шаблона на основе разметки. HTML5 был пятой и последней крупной версией HTML, которая является рекомендацией Консорциума World Wide Web. HTML5 стоит выделить следующие элементы: Video – Определяет видео или фильм; Figure – рисунок; Header – заголовок страницы; Section – крупный блок страницы; Footer – нижняя часть страницы; meta charset = «UTF-8» – обновление кодировки страницы; Nav – навигация по сайту; Aside – дополнительный контент в виде боковой колонки; Article – статья, основная часть контента.</br>
-<b>CSS2</b> - это язык таблиц стилей, который позволяет авторам и пользователям прикреплять стиль (Например, шрифты, интервалы и звуковые сигналы) к структурированным документам (например, документам HTML и приложениям XML). Отделяя стиль представления документов от содержания документов, CSS2 упрощает веб-разработку и обслуживание сайта. CSS2 является подмножеством каскадных таблиц стилей уровня 1 и имеет расширенные возможности, такие как:</br>
+<b>2.	Особенности HTML5 и CSS2. Возможности элемента canvas.</b></br></br>
+<strong>HTML5</strong>-это стек программных решений, который определяет свойства и поведение содержимого веб-страницы путем реализации шаблона на основе разметки. HTML5 был пятой и последней крупной версией HTML, которая является рекомендацией Консорциума World Wide Web. HTML5 стоит выделить следующие элементы: Video – Определяет видео или фильм; Figure – рисунок; Header – заголовок страницы; Section – крупный блок страницы; Footer – нижняя часть страницы; meta charset = «UTF-8» – обновление кодировки страницы; Nav – навигация по сайту; Aside – дополнительный контент в виде боковой колонки; Article – статья, основная часть контента.</br>
+<strong>CSS2</strong> - это язык таблиц стилей, который позволяет авторам и пользователям прикреплять стиль (Например, шрифты, интервалы и звуковые сигналы) к структурированным документам (например, документам HTML и приложениям XML). Отделяя стиль представления документов от содержания документов, CSS2 упрощает веб-разработку и обслуживание сайта. CSS2 является подмножеством каскадных таблиц стилей уровня 1 и имеет расширенные возможности, такие как:</br>
 	•	Концепция типов носителей</br>
 	•	Звуковые таблицы стилей</br>
 	•	Особенности интернационализации</br>
@@ -369,7 +369,7 @@
 	•	Возможность контролировать переполнение контента, отсечение</br>
 	•	Абсолютное, фиксированное и относительное позиционирование</br>
 	•	Расширенный механизм селекторов</br>
-<b>Canvas</b>: В информатике и визуализации холст-это контейнер, содержащий различные элементы чертежа (линии, фигуры, текст, рамки, содержащие другие элементы и т. д.).). Она берет свое название от холста, используемого в изобразительном искусстве. HTML <canvas> элемент используется для рисования графики, на лету, с помощью JavaScript. Элемент < canvas> является только контейнером для графики. Вы должны использовать JavaScript, чтобы на самом деле рисовать графику. Canvas имеет несколько методов для рисования контуров, прямоугольников, кругов, текста и добавления изображений.</br>
+<strong>Canvas</strong>: В информатике и визуализации холст-это контейнер, содержащий различные элементы чертежа (линии, фигуры, текст, рамки, содержащие другие элементы и т. д.).). Она берет свое название от холста, используемого в изобразительном искусстве. HTML <canvas> элемент используется для рисования графики, на лету, с помощью JavaScript. Элемент < canvas> является только контейнером для графики. Вы должны использовать JavaScript, чтобы на самом деле рисовать графику. Canvas имеет несколько методов для рисования контуров, прямоугольников, кругов, текста и добавления изображений.</br>
 
             </p>
           </div>
